[gd_scene load_steps=2 format=3 uid="uid://b03ammqyb0ggd"]

[ext_resource type="Script" uid="uid://dfqlih22f6jyx" path="res://Scenes/main_menu.gd" id="1_28flt"]

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28flt")

[node name="single_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.422222
anchor_right = 0.4
anchor_bottom = 0.537037
text = "SINGLE-PLAYER"
metadata/_edit_use_anchors_ = true

[node name="multi_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.6
anchor_right = 0.4
anchor_bottom = 0.714815
text = "MULTI-PLAYER"
metadata/_edit_use_anchors_ = true

[node name="exit_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.777778
anchor_right = 0.2
anchor_bottom = 0.892593
text = "EXIT"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="single_btn" to="." method="_on_single_btn_pressed"]
[connection signal="pressed" from="multi_btn" to="." method="_on_multi_btn_pressed"]
[connection signal="pressed" from="exit_btn" to="." method="_on_exit_btn_pressed"]
